modify queue
